--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 15/11/2021: </b><a href="https://laravel-news.com/multi-tenant-saas-boilerplate-for-laravel"> SaaS boilerplate </a></li>							
 								<li><b> 16/11/2021: </b><a href="https://laravel-news.com/laravel-cache-helper"> Cache herlper </a></li>
 								<li><b> 18/11/2021: </b><a href="https://laravel-news.com/learn-how-to-build-modern-laravel-apps-using-inertia-js"> Inertia.js </a></li>
+								<li><b> 19/11/2021: </b><a href="https://laravel-news.com/laravel-route-statistics"> route statistic </a></li>
+								<li><b> 22/11/2021: </b><a href="https://laravel-news.com/announcing-the-php-foundation"> announcing the PHP Foudation </a></li>
+								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire </a></li>
 								
 			      				</ul>
 			      				<br>
