--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>(Queue Monitoring)</b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon </a></li>
 								<li><b>(debug assistant)</b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>	
 			      				</ul>	
-							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices chen using Laravel</b></a>
+							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
 			      				</br>
 			     				<h2 style="text-decoration:underline;"> <b><span>html</span></b></h2>
