--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire </a></li>
 								<li><b> 26/11/2021: </b><a href="https://laravel-news.com/php-8-1-0"> PHP 8.1 </a></li>
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
+								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
+								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 								
 			      				</ul>
 			      				<br>
@@ -256,7 +258,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>(Oauth authentification)</b><a href="https://laravel.com/docs/8.x/socialite"> Larvel Socialite </a></li>
 								<li><b>(server management)</b><a href="https://forge.laravel.com/"> Larvel Forge </a></li>
 								<li><b>(Queue Monitoring)</b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon </a></li>
-								<li><b>(debug assistant)</b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>	
+								<li><b>(debug assistant)</b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>
+								<li><b>(system secret manager)</b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 			      				</ul>	
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
