--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@ https://templatemo.com/tm-536-dream-pulse
 									<i class='fab fa-html5' style='font-size:48px;color:orange'></i>
 									<i class='fab fa-php' style='font-size:48px;color:black'></i> 
 									<i class='fab fa-C#' style='font-size:48px'></i> 
+									<i class='fab fa-linux' style='font-size:48px'></i> 
+									<i class='fab fa-docker' style='font-size:48px'></i> 
+									<i class='fab fa-owasp' style='font-size:48px'></i> 
 								</ul> 
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
@@ -248,6 +251,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
+								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> e-commerce </a></li>
+								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
 								
 			      				</ul>
 			      				<br>
