--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ https://templatemo.com/tm-536-dream-pulse
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
 			      				<b>Timeline of Laravel updates: </b>
 							<ul>
-								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha">launch of the Css Tailwind platform (in its Alpha stage)</a></li>
+								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha"> Launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
 								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions"> Laravel Github Actions</a></li>
 								<li><b> 13/10/2021: </b><a href="https://laravel-news.com/laravel-8-64-0"> release of Laravel version 8.64</a></li> 
@@ -252,7 +252,9 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> e-commerce </a></li>
-								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
+								<li><b> 07/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
+								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Stack Admin Panel </a></li>
+								<li><b> 10/12/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-is-now-released"> Tailwind CSS v3 </a></li>
 								
 			      				</ul>
 			      				<br>
