--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> e-commerce </a></li>
 								<li><b> 07/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
+								<li><b> 08/12/2021: </b><a href="https://laravel-news.com/laravel-8-75-0"> Laravel v8.75 </a></li>
 								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Stack Admin Panel </a></li>
 								<li><b> 10/12/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-is-now-released"> Tailwind CSS v3 </a></li>
 								
