--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ https://templatemo.com/tm-536-dream-pulse
 									<i class='fab fa-html5' style='font-size:48px;color:orange'></i>
 									<i class='fab fa-php' style='font-size:48px;color:black'></i> 
 									<i class='fab fa-C#' style='font-size:48px'></i> 
-									<i class='fab fa-linux' style='font-size:48px';color:black></i> 
-									<i class='fab fa-docker' style='font-size:48px';color:blue></i> 
+									<i class='fab fa-linux' style='font-size:48px;color:black'></i> 
+									<i class='fab fa-docker' style='font-size:48px;color:blue'></i> 
 									<i class='fab fa-owasp' style='font-size:48px'></i>
 								</ul> 
 								<li>Understands network flows</li>
