--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
-								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> e-commerce </a></li>
+								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> Archtech e-commerce </a></li>
 								<li><b> 07/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
 								<li><b> 08/12/2021: </b><a href="https://laravel-news.com/laravel-8-75-0"> Laravel v8.75 </a></li>
 								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Stack Admin Panel </a></li>
@@ -268,7 +268,17 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>(Queue Monitoring)</b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon </a></li>
 								<li><b>(debug assistant)</b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>
 								<li><b>(system secret manager)</b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
-			      				</ul>	
+			      				</ul>
+			      				<br>
+			      				<b>partenaire de Laravel</b>
+			      				<ul>
+								<li><b>(Code execution monotoring)</b><a href="https://inspector.dev/"> Inspector </a></li>
+								<li><b>(server/database automation)</b><a href="https://simplebackups.com/?utm_source=laravelnews"> Simple Backups </a></li> 
+								<li><b>()</b><a href="">  </a></li> 
+								<li><b>()</b><a href="">  </a></li> 
+								<li><b>()</b><a href="">  </a></li> 
+			      				</ul>
+			      				<br>
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
 			      				</br>
