--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ https://templatemo.com/tm-536-dream-pulse
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
 			      				<b>Timeline of Laravel updates: </b>
 							<ul>
-								<h3 style="text-decoration:underline;"><b> October </b></h3>
+								<b> October </b>
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha"> Launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
 								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions"> Laravel Github Actions</a></li>
@@ -238,7 +238,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 25/10/2021: </b><a href="https://laravel-news.com/scout-apm-intuitive-laravel-performance-monitoring">Laravel Scout performance monitoring</a></li>
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
-								<h3 style="text-decoration:underline;"><b> November </b></h3>
+								<b> November </b>
 								<li><b> 02/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
 								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> Laravel World </a></li> 
 								<li><b> 10/11/2021: </b><a href="https://laravel-news.com/laravel-8-70-0"> Release of Laravel version 8.70 </a></li>
@@ -251,7 +251,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire </a></li>
 								<li><b> 26/11/2021: </b><a href="https://laravel-news.com/php-8-1-0"> PHP 8.1 </a></li>
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
-								<h3 style="text-decoration:underline;"><b> December </b></h3>
+								<b> December </b>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> Archtech e-commerce </a></li>
