--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ https://templatemo.com/tm-536-dream-pulse
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
 			      				<b>Timeline of Laravel updates: </b>
 							<ul>
-								<b> October </b>
+								<b style="text-decoration:underline;"> October </b>
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha"> Launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
 								<li><b> 12/10/2021: </b><a href="https://laravel-news.com/laravel-github-actions"> Laravel Github Actions</a></li>
