--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 25/10/2021: </b><a href="https://laravel-news.com/scout-apm-intuitive-laravel-performance-monitoring">Laravel Scout performance monitoring</a></li>
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
+								<br>
 								<style="text-decoration:underline;"><b> November </b></style>
 								<li><b> 02/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
 								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> Laravel World </a></li> 
@@ -251,6 +252,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire </a></li>
 								<li><b> 26/11/2021: </b><a href="https://laravel-news.com/php-8-1-0"> PHP 8.1 </a></li>
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
+								<br>
 								<style="text-decoration:underline;"><b> December </b></style>
 								<li><b> 02/12/2021: </b><a href="https://laravel-news.com/laravel-ban"> Laravel ban package </a></li>
 								<li><b> 03/12/2021: </b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
@@ -274,7 +276,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>(system secret manager)</b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 			      				</ul>
 			      				<br>
-			      				<b>partenaire de Laravel</b>
+			      				<--! <b>partenaire de Laravel</b>
 			      				<ul>
 								<li><b>(Code execution monotoring)</b><a href="https://inspector.dev/"> Inspector </a></li>
 								<li><b>(server/database automation)</b><a href="https://simplebackups.com/?utm_source=laravelnews"> Simple Backups </a></li> 
@@ -282,7 +284,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>()</b><a href="">  </a></li> 
 								<li><b>()</b><a href="">  </a></li> 
 			      				</ul>
-			      				<br>
+			      				<br> -->
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
 			      				</br>
