--- a/index.html
+++ b/index.html
@@ -276,15 +276,19 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b>(system secret manager)</b><a href="https://laravel-news.com/aws-parameter-store"> AWS parameter store </a></li>
 			      				</ul>
 			      				<br>
-			      				<--! <b>partenaire de Laravel</b> -->
-			      				<--! <ul> -->
-								<--! <li><b>(Code execution monotoring)</b><a href="https://inspector.dev/"> Inspector </a></li> -->
-								<--! <li><b>(server/database automation)</b><a href="https://simplebackups.com/?utm_source=laravelnews"> Simple Backups </a></li> -->
-								<--! <li><b>()</b><a href="">  </a></li> -->
-								<--! <li><b>()</b><a href="">  </a></li> -->
-								<--! <li><b>()</b><a href="">  </a></li> -->
-			      				<--! </ul> -->
-			      				<--! <br> -->
+			      
+			      				<--!
+							<b>partenaire de Laravel</b>
+			      				<ul> 
+								<li><b>(Code execution monotoring)</b><a href="https://inspector.dev/"> Inspector </a></li>
+								<li><b>(server/database automation)</b><a href="https://simplebackups.com/?utm_source=laravelnews"> Simple Backups </a></li>
+								<li><b>()</b><a href="">  </a></li>
+								<li><b>()</b><a href="">  </a></li>
+								<li><b>()</b><a href="">  </a></li>
+			      				</ul>
+			      				<br>
+			    				-->
+			      				
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
 			      				</br>
