--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 08/12/2021: </b><a href="https://laravel-news.com/laravel-8-75-0"> Laravel v8.75 </a></li>
 								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Stack Admin Panel </a></li>
 								<li><b> 10/12/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-is-now-released"> Tailwind CSS v3 </a></li>
+								<li><b> 14/12/2021: </b><a href="https://laravel-news.com/livewire-form-builder"> Livrwire Form Builder </a></li>
 								
 								<h3 style="text-decoration:underline;"></h3>
 			      				</ul>
