--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ https://templatemo.com/tm-536-dream-pulse
 			    				<p><b>Explaining the chosen subject:</b></p>
 			      				<p> Primarily a php framework, Laravel is a web designing pack containing plenty of different technological services, from Appplication scafolding to server management. Its most recent version was released in February 10, 2021 (that being version 8.27), and a version 9 is due to be released in the early 2022.</p>
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
+			      				<p>Laravel is also a part of a group called TALL stack (Tailwind, Alpine.js, Laravel, Livewire)</p>
 			      				<b>Timeline of Laravel updates: </b>
 							<ul>
 								<style="text-decoration:underline;"><b> October </b></style>
@@ -259,9 +260,9 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 06/12/2021: </b><a href="https://laravel-news.com/archtech-ecommerce-package"> Archtech e-commerce </a></li>
 								<li><b> 07/12/2021: </b><a href="https://laravel-news.com/laravel-showsql"> ShowsSQL </a></li>
 								<li><b> 08/12/2021: </b><a href="https://laravel-news.com/laravel-8-75-0"> Laravel v8.75 </a></li>
-								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Stack Admin Panel </a></li>
+								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Livewire Stack Admin Panel </a></li>
 								<li><b> 10/12/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-is-now-released"> Tailwind CSS v3 </a></li>
-								<li><b> 14/12/2021: </b><a href="https://laravel-news.com/livewire-form-builder"> Livrwire Form Builder </a></li>
+								<li><b> 14/12/2021: </b><a href="https://laravel-news.com/livewire-form-builder"> Livewire Form Builder </a></li>
 								
 								<h3 style="text-decoration:underline;"></h3>
 			      				</ul>
