--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 18/11/2021: </b><a href="https://laravel-news.com/learn-how-to-build-modern-laravel-apps-using-inertia-js"> Inertia.js </a></li>
 								<li><b> 19/11/2021: </b><a href="https://laravel-news.com/laravel-route-statistics"> route statistic </a></li>
 								<li><b> 22/11/2021: </b><a href="https://laravel-news.com/announcing-the-php-foundation"> announcing the PHP Foudation </a></li>
-								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire </a></li>
+								<li><b> 24/11/2021: </b><a href="https://laravel-news.com/laravel-livewire-calendar"> Livewire Calendar </a></li>
 								<li><b> 26/11/2021: </b><a href="https://laravel-news.com/php-8-1-0"> PHP 8.1 </a></li>
 								<li><b> 30/11/2021: </b><a href="https://laravel-news.com/laravel-vue-i18n"> Laravel and vue translation package </a></li>
 								<br>
