--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 09/12/2021: </b><a href="https://laravel-news.com/filament-v2"> Livewire Stack Admin Panel </a></li>
 								<li><b> 10/12/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-is-now-released"> Tailwind CSS v3 </a></li>
 								<li><b> 14/12/2021: </b><a href="https://laravel-news.com/livewire-form-builder"> Livewire Form Builder </a></li>
+								<li><b> 15/12/2021: </b><a href="https://laravel-news.com/laravel-blade-component-to-serve-images-and-download-files"> Blade component </a></li>
+								<li><b> 17/12/2021: </b><a href="https://laravel-news.com/laravel-geographical-calculator"> Geographical calculator </a></li>
+								<li><b>  </b><a href="">  </a></li>
+								
 								
 								<h3 style="text-decoration:underline;"></h3>
 			      				</ul>
