--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 30/12/2021: </b><a href="https://laravel-news.com/primitive-types-in-controllers-and-closure-routes"> primitives Types </a></li>
 								<br>
 								<style="text-decoration:underline;"><b> Janvier </b></style>
+								<li><b> 04/01/2021: </b><a href="https://laravel-news.com/migrator-gui-migration-manager-for-laravel"> GUI Migrations </a></li>
 								<li><b> /01/2021: </b><a href="">  </a></li>
 								
 								
