--- a/index.html
+++ b/index.html
@@ -274,6 +274,11 @@ https://templatemo.com/tm-536-dream-pulse
 								<br>
 								<style="text-decoration:underline;"><b> Janvier </b></style>
 								<li><b> 04/01/2021: </b><a href="https://laravel-news.com/migrator-gui-migration-manager-for-laravel"> GUI Migrations </a></li>
+								<li><b> 06/01/2021: </b><a href="https://laravel-news.com/media-upload-component-for-vue-3"> Vue 3 media uploads </a></li>
+								<li><b> 07/01/2021: </b><a href="https://laravel-news.com/laravel-hours-helper"> Laravel hours helper </a></li>
+								<li><b> 11/01/2021: </b><a href="https://laravel-news.com/inertia-server-side-rendering"> inerjia.js server-side rendering </a></li>
+								<li><b> 12/01/2021: </b><a href="https://laravel-news.com/laravel-pipe-through-collections-method"> Laravel collections method </a></li>
+								<li><b> 14/01/2021: </b><a href="https://laravel-news.com/alpine-js-focus-plugin"> Alpine.js Focus plugins </a></li>
 								<li><b> /01/2021: </b><a href="">  </a></li>
 								
 								
