--- a/index.html
+++ b/index.html
@@ -279,8 +279,11 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 11/01/2021: </b><a href="https://laravel-news.com/inertia-server-side-rendering"> inerjia.js server-side rendering </a></li>
 								<li><b> 12/01/2021: </b><a href="https://laravel-news.com/laravel-pipe-through-collections-method"> Laravel collections method </a></li>
 								<li><b> 14/01/2021: </b><a href="https://laravel-news.com/alpine-js-focus-plugin"> Alpine.js Focus plugins </a></li>
+								<li><b> 18/01/2021: </b><a href="https://laravel-news.com/saloon"> Laravel Saloon </a></li>
+								<li><b> 19/01/2021: </b><a href="https://laravel-news.com/laravel-8-80-0"> Route Group Controller </a></li>
+								<li><b> 20/01/2021: </b><a href="https://laravel-news.com/laracon-online-winter-will-be-free"> Laracon Online Winter </a></li>
+								<li><b> 21/01/2021: </b><a href="https://laravel-news.com/laravel-9-ignition-error-pages"> Ignition in Laravel 9 </a></li>
 								<li><b> /01/2021: </b><a href="">  </a></li>
-								
 								
 								<h3 style="text-decoration:underline;"></h3>
 			      				</ul>
