--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 19/01/2021: </b><a href="https://laravel-news.com/laravel-8-80-0"> Route Group Controller </a></li>
 								<li><b> 20/01/2021: </b><a href="https://laravel-news.com/laracon-online-winter-will-be-free"> Laracon Online Winter </a></li>
 								<li><b> 21/01/2021: </b><a href="https://laravel-news.com/laravel-9-ignition-error-pages"> Ignition in Laravel 9 </a></li>
+								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/laravel-dumper"> Laravel Dumper </a></li>
+								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/safer-staging-environments-with-blackhole-storage"> Blackhole storage </a></li>
+								<li><b> 27/01/2021: </b><a href="https://laravel-news.com/eloquent-inspector-for-laravel"> Eloquent inspector </a></li>
+								<li><b> 28/01/2021: </b><a href="https://laravel-news.com/laravel-slack-alerts"> Laravel stack alerts </a></li>
 								<li><b> /01/2021: </b><a href="">  </a></li>
 								
 								<h3 style="text-decoration:underline;"></h3>
@@ -301,6 +305,7 @@ https://templatemo.com/tm-536-dream-pulse
 			      				<br>			      				
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices when using Laravel</b></a>
 			      				<br>
+						      	<a href="https://laravel-news.com/laravel-origins-the-documentary-trailer"><b> Laravel Origins </b></a>
 			      				</br>
 			     				<h2 style="text-decoration:underline;"> <b><span>html</span></b></h2>
 			      				<p><b>Explaining the chosen subject:</b></p>
