--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/safer-staging-environments-with-blackhole-storage"> Blackhole storage </a></li>
 								<li><b> 27/01/2021: </b><a href="https://laravel-news.com/eloquent-inspector-for-laravel"> Eloquent inspector </a></li>
 								<li><b> 28/01/2021: </b><a href="https://laravel-news.com/laravel-slack-alerts"> Laravel stack alerts </a></li>
+								
+								<style="text-decoration:underline;"><b> Fevrier </b></style>
 								<li><b> /01/2021: </b><a href="">  </a></li>
 								
 								<h3 style="text-decoration:underline;"></h3>
