--- a/index.html
+++ b/index.html
@@ -297,11 +297,34 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 09/02/2021: </b><a href="https://laravel-news.com/php-statistics "> php statistics </a></li>
 								<li><b> 10/02/2021: </b><a href="https://laravel-news.com/laravel-google-chat-alerts "> Google chat alerts </a></li>
 								<li><b> 11/02/2021: </b><a href="https://laravel-news.com/git-trim"> git trim </a></li>
-								<li><b> 1/02/2021: </b><a href="">  </a></li>
-								<li><b> 1/02/2021: </b><a href="">  </a></li>
-								<li><b> 1/02/2021: </b><a href="">  </a></li>								
+								<li><b> 15/02/2021: </b><a href="https://laravel-news.com/envy"> Envy by Worksome </a></li>
+								<li><b> 16/02/2021: </b><a href="https://laravel-news.com/avoiding-accidental-email-sends"> Eviter d'envoyer d'emails par accidents </a></li>
+								<li><b> 17/02/2021: </b><a href="https://laravel-news.com/create-and-send-digest-emails-in-laravel"> Emails avec Laravel </a></li>
+								<li><b> 18/02/2021: </b><a href="https://laravel-news.com/automatic-route-discovery-in-laravel "> automatic route discovery </a></li>
+								<li><b> 22/02/2021: </b><a href="https://laravel-news.com/zsh-artisan "> zhs Artisan (develloper tool) </a></li>
+								<li><b> 23/02/2021: </b><a href="https://laravel-news.com/laravel-9-2-0 "> Laravel 9.2 </a></li>
+								<li><b> 24/02/2021: </b><a href="https://laravel-news.com/enum-helpers-for-php "> Enum helper for php </a></li>
+								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users "> Never trust your users (tutoriel) </a></li>
 								
 								<h3 style="text-decoration:underline;"></h3>
+								<li><b> 01/03/2021: </b><a href="https://laravel-news.com/laravel-telegraph"> Laravel Telegraph </a></li>
+								<li><b> 02/03/2021: </b><a href="https://laravel-news.com/laravel-envy"> Laravel Envy (Packages) </a></li>
+								<li><b> 0/03/2021: </b><a href="">  </a></li>
+								<li><b> 0/03/2021: </b><a href="">  </a></li>
+								<li><b> 0/03/2021: </b><a href="">  </a></li>
+								<li><b> 0/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 1/03/2021: </b><a href="">  </a></li>
 			      				</ul>
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
