--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@ https://templatemo.com/tm-536-dream-pulse
 							
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
-							<p><b>What I've done:</b> N/A</p>
+							<p><b>What I've done:</b> Provided an intership with Maviflex</p>
 							<p><b>Main project:</b> N/A</p>
-							<p><b>Link to project:</b> N/A</p>
+							<p><b>Link to rapport de stage:</b> <a href=./rapport de stage frederic de Gaudemar-Ancey Final 2> </a></p>
+							
           					</div>                        
           				</div>                  
          			</div>     
