--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 25/01/2021: </b><a href="https://laravel-news.com/safer-staging-environments-with-blackhole-storage"> Blackhole storage </a></li>
 								<li><b> 27/01/2021: </b><a href="https://laravel-news.com/eloquent-inspector-for-laravel"> Eloquent inspector </a></li>
 								<li><b> 28/01/2021: </b><a href="https://laravel-news.com/laravel-slack-alerts"> Laravel stack alerts </a></li>
-								
+								<br>
 								<style="text-decoration:underline;"><b> Fevrier </b></style>
 								<li><b> 01/02/2021: </b><a href="https://laravel-news.com/roach-php"> Web scrapping Toolkit </a></li>
 								<li><b> 03/02/2021: </b><a href="https://laravel-news.com/php-monitor-5-0"> Php monitor 5.0 </a></li>
@@ -306,17 +306,17 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 23/02/2021: </b><a href="https://laravel-news.com/laravel-9-2-0 "> Laravel 9.2 </a></li>
 								<li><b> 24/02/2021: </b><a href="https://laravel-news.com/enum-helpers-for-php "> Enum helper for php </a></li>
 								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users "> Never trust your users (tutoriel) </a></li>
-								
-								<h3 style="text-decoration:underline;"></h3>
+								<br>
+								<h3 style="text-decoration:underline;"> Mars </h3>
 								<li><b> 01/03/2021: </b><a href="https://laravel-news.com/laravel-telegraph"> Laravel Telegraph </a></li>
 								<li><b> 02/03/2021: </b><a href="https://laravel-news.com/laravel-envy"> Laravel Envy (Packages) </a></li>
-								<li><b> 0/03/2021: </b><a href="">  </a></li>
-								<li><b> 0/03/2021: </b><a href="">  </a></li>
-								<li><b> 0/03/2021: </b><a href="">  </a></li>
-								<li><b> 0/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 03/03/2021: </b><a href="https://laravel-news.com/laravel-blade-emerald"> Blade Components </a></li>
+								<li><b> 04/03/2021: </b><a href="https://laravel-news.com/forward-laravel-logs-to-amazon-kinesis"> Laravel logs to Amazon Kinesis </a></li>
+								<li><b> 08/03/2021: </b><a href="https://laravel-news.com/global-ray"> PHP scripts </a></li>
+								<li><b> 09/03/2021: </b><a href="https://laravel-news.com/laravel-9-4-0"> Laravel 9.4 </a></li>
+								<li><b> 10/03/2021: </b><a href="https://laravel-news.com/blade-cache-directive"> Blade Markup </a></li>
+								<li><b> 11/03/2021: </b><a href="Implement a custom driver for Laravel Socialite | Laravel News (laravel-news.com) "> Laravel socialite cusom driver </a></li>
+								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/nexopos-point-of-sale-for-laravel"> NexoPOS (Application) </a></li>
 								<li><b> 1/03/2021: </b><a href="">  </a></li>
 								<li><b> 1/03/2021: </b><a href="">  </a></li>
 								<li><b> 1/03/2021: </b><a href="">  </a></li>
