--- a/index.html
+++ b/index.html
@@ -317,15 +317,15 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 10/03/2021: </b><a href="https://laravel-news.com/blade-cache-directive"> Blade Markup </a></li>
 								<li><b> 11/03/2021: </b><a href="Implement a custom driver for Laravel Socialite | Laravel News (laravel-news.com) "> Laravel socialite cusom driver </a></li>
 								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/nexopos-point-of-sale-for-laravel"> NexoPOS (Application) </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
-								<li><b> 1/03/2021: </b><a href="">  </a></li>
+								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/statamic-3-3-released"> statamic 3.3 </a></li>
+								<li><b> 17/03/2021: </b><a href="https://laravel-news.com/laravel-livewire-form-wizard "> Livewire form wizard </a></li>
+								<li><b> 18/03/2021: </b><a href="https://laravel-news.com/indentation-package-to-detect-and-change-indentation"> indentation package </a></li>
+								<li><b> 21/03/2021: </b><a href="https://laravel-news.com/metabase-maps-geocodio"> geocodio </a></li>
+								<li><b> 22/03/2021: </b><a href="https://laravel-news.com/use-laravel-dusk-to-test-js-based-applications"> Laravel Dusk test Js </a></li>
+								<li><b> 23/03/2021: </b><a href="https://laravel-news.com/pest-given-when-then"> GWT plugin for Pest </a></li>
+								<li><b> 2/03/2021: </b><a href="">  </a></li>
+								<li><b> 2/03/2021: </b><a href="">  </a></li>
+								<li><b> 2/03/2021: </b><a href="">  </a></li>
 			      				</ul>
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
