--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 24/02/2021: </b><a href="https://laravel-news.com/enum-helpers-for-php "> Enum helper for php </a></li>
 								<li><b> 25/02/2021: </b><a href="https://laravel-news.com/never-trust-your-users "> Never trust your users (tutoriel) </a></li>
 								<br>
-								<h3 style="text-decoration:underline;"> Mars </h3>
+								<style="text-decoration:underline;"><b> Mars </b></style>
 								<li><b> 01/03/2021: </b><a href="https://laravel-news.com/laravel-telegraph"> Laravel Telegraph </a></li>
 								<li><b> 02/03/2021: </b><a href="https://laravel-news.com/laravel-envy"> Laravel Envy (Packages) </a></li>
 								<li><b> 03/03/2021: </b><a href="https://laravel-news.com/laravel-blade-emerald"> Blade Components </a></li>
