--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 21/03/2021: </b><a href="https://laravel-news.com/metabase-maps-geocodio"> geocodio </a></li>
 								<li><b> 22/03/2021: </b><a href="https://laravel-news.com/use-laravel-dusk-to-test-js-based-applications"> Laravel Dusk test Js </a></li>
 								<li><b> 23/03/2021: </b><a href="https://laravel-news.com/pest-given-when-then"> GWT plugin for Pest </a></li>
-								<li><b> 2/03/2021: </b><a href="">  </a></li>
+								<li><b> 24/03/2021: </b><a href="https://laravel-news.com/laravel-translations-checker"> Laravel translation checker </a></li>
 								<li><b> 2/03/2021: </b><a href="">  </a></li>
 								<li><b> 2/03/2021: </b><a href="">  </a></li>
 			      				</ul>
