--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
 								<ul>
-									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i>
-									<i class='fab fa-github' style='font-size:48px;color:black'></i>  
-									<i class='fab fa-python' style='font-size:48px'></i>
-									<i class='fab fa-html5' style='font-size:48px;color:orange'></i>
-									<i class='fab fa-php' style='font-size:48px;color:black'></i> 
-									<i class='fab fa-C#' style='font-size:48px'></i> 
-									<i class='fab fa-linux' style='font-size:48px;color:black'></i> 
-									<i class='fab fa-docker' style='font-size:48px;color:light-blue'></i> 
-									<i class='fab fa-django' style='font-size:48px'></i>
+									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i> <br>
+									<i class='fab fa-github' style='font-size:48px;color:black'></i>  <br>
+									<i class='fab fa-python' style='font-size:48px'></i><br>
+									<i class='fab fa-html5' style='font-size:48px;color:orange'></i><br>
+									<i class='fab fa-php' style='font-size:48px;color:black'></i> <br>
+									<i class='fab fa-C#' style='font-size:48px'></i> <br>
+									<i class='fab fa-linux' style='font-size:48px;color:black'></i> <br>
+									<i class='fab fa-docker' style='font-size:48px;color:light-blue'></i> <br>
+									<i class='fab fa-django' style='font-size:48px'></i><br>
 								</ul> 
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
@@ -192,7 +192,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
-									<li><b>Presentation on the APT:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
+									<li><b><a href="../Presentation_APT_2 (1).pptx">Presentation on the APT:</a></b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
 									<li><b>Forms on avocats:</b> Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
 									<li><b>PHP:</b> We made some small sites with PHP programming.</li>
 									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
