--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> Provided an intership with Maviflex</p>
 							<p><b>Main project:</b> N/A</p>
-							<p><b>Link to rapport de stage:</b> <a href="./rapport de stage frederic de Gaudemar-Ancey Final 2"> </a></p>
+							<p><b><a href="./rapport de stage frederic de Gaudemar-Ancey Final 2"> Link to rapport de stage:</a></b></p>
 							
           					</div>                        
           				</div>                  
