--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@ https://templatemo.com/tm-536-dream-pulse
                                 			<p><b>What I've done:</b> Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
 							<p><b>Main project:</b> Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
+							<p><b>Link to rapport de stage:</b></p>
 							
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> Provided an intership with Maviflex</p>
 							<p><b>Main project:</b> N/A</p>
-							<p><b><a href="../rapport de stage frederic de Gaudemar-Ancey Final 2"> Link to rapport de stage:</a></b></p>
+							<p><b> Link to rapport de stage:</b></p>
 							
           					</div>                        
           				</div>                  
