--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 08/03/2021: </b><a href="https://laravel-news.com/global-ray"> PHP scripts </a></li>
 								<li><b> 09/03/2021: </b><a href="https://laravel-news.com/laravel-9-4-0"> Laravel 9.4 </a></li>
 								<li><b> 10/03/2021: </b><a href="https://laravel-news.com/blade-cache-directive"> Blade Markup </a></li>
-								<li><b> 11/03/2021: </b><a href="Implement a custom driver for Laravel Socialite | Laravel News (laravel-news.com) "> Laravel socialite cusom driver </a></li>
+								<li><b> 11/03/2021: </b><a href="https://laravel-news.com/laravel-socialite-custom-driver"> Laravel socialite cusom driver </a></li>
 								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/nexopos-point-of-sale-for-laravel"> NexoPOS (Application) </a></li>
 								<li><b> 15/03/2021: </b><a href="https://laravel-news.com/statamic-3-3-released"> statamic 3.3 </a></li>
 								<li><b> 17/03/2021: </b><a href="https://laravel-news.com/laravel-livewire-form-wizard "> Livewire form wizard </a></li>
