--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ https://templatemo.com/tm-536-dream-pulse
                                 			<p><b>What I've done:</b> Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
 							<p><b>Main project:</b> Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
-							<p><b>Link to rapport de stage:</b></p>
+							<p><a href="FredericdeGaudemarAncey/rapport de stage frederic de Gaudemar-Ancey Final 2"><b>Link to rapport de stage </a></b></p>
 							
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> Provided an intership with Maviflex</p>
 							<p><b>Main project:</b> N/A</p>
-							<p><b> Link to rapport de stage:</b></p>
+							<p><a href="https://leschassagnes1-my.sharepoint.com/:w:/r/personal/fredericdegaudemarancey_leschassagnes_net/_layouts/15/Doc.aspx?sourcedoc=%7B5B9A02D5-6551-49A7-B459-FB5BB2B25800%7D&file=nouvelle%20rapport%20de%20stage%20frederic%20de%20Gaudemar-Ancey%202%20%20-%20Copy.docx&action=default&mobileredirect=true&DefaultItemOpen=1&ct=1648287079987&wdOrigin=OFFICECOM-WEB.MAIN.EDGEWORTH&cid=b904df32-adc5-4ce8-864c-cffa375750be"><b> Link to rapport de stage:</b></a></p>
 							
           					</div>                        
           				</div>                  
