--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ https://templatemo.com/tm-536-dream-pulse
           			<div class="w-100 tm-double-border-1 tm-border-gray">
           				<div class="tm-double-border-2 tm-border-gray tm-box-pad">
           					<div class="tm-gallery-wrap">
+							<h2><a href="https://leschassagnes1-my.sharepoint.com/:w:/r/personal/fredericdegaudemarancey_leschassagnes_net/_layouts/15/Doc.aspx?sourcedoc=%7B97A2BF47-1448-49DB-BA0E-FABBD7768F2D%7D&file=etudiants%20BTS%20SIO%20CV%20frederic%20de%20Gaudemar-Ancey.docx&action=default&mobileredirect=true&DefaultItemOpen=1&ct=1648287269442&wdOrigin=OFFICECOM-WEB.MAIN.EDGEWORTH&cid=1cf6ad45-bb56-41f5-9183-f1f53622f6e1">lien cv</a></h2>
+							<br>
+							</br>
                         				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">internship</h2>
          						<h2 style="text-decoration:underline;"> <span> Internship first year:</span></h2>
                                 			<p><b>What I've done:</b> Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
